--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --dark-color: rgb(75, 74, 74);
-    --medium-color: rgb(121, 121, 121);
+    --dark-color: rgba(75, 74, 74, 0,822);
+    --medium-color: rgba(121, 121, 121, 0.2);
     --light-color: rgb(196, 196, 196);
 }
 
@@ -20,8 +20,110 @@ body {
 
 .header {
     height: 95vh;
-    background-image: url('../img/pexels-selim-cetin-4038045.jpg');
+    background-image: linear-gradient(to bottom right,
+    var(--light-color), var(--medium-color)), url('../img/pexels-selim-cetin-4038045.jpg');
     background-position: top;
     background-size: cover;
     clip-path: polygon(0 0, 100% 17%, 100% 100%, 0 100%);
+}
+
+.logo-box {
+    position: absolute;
+    top: 6%;
+    left: 3%;
+}
+
+.logo {
+    height: 1.7rem;
+}
+
+.text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+}
+
+.heading-primary-main{
+    display: block;
+    font-size: 5rem;
+    letter-spacing: 1.5rem;
+    animation-name: moveInLeft;
+    animation-duration: 3s;
+    animation-timing-function: ease-out;
+}
+
+@keyframes moveInLeft {
+    0%{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.heading-primary-sub {
+    display: block;
+    font-size: 2rem;
+    letter-spacing: 0.6rem;
+    animation-name: moveInRight;
+    animation-duration: 3s;
+    animation-timing-function: ease-out;
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+.btn-div {
+    text-align: center;
+}
+
+.btn {
+    display: inline-block;
+    color: rgb(207, 207, 207);
+    text-decoration: none;
+    border: 2px solid rgb(255, 255, 255);
+    padding: 1rem;
+    margin: 2rem auto;
+    opacity: 0;
+    animation-name: btn;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    transition-property: transform;
+    transition-duration: 3s; 
+}
+
+.btn:hover {
+    transform: rotateY(360deg);
+}
+
+
+@keyframes btn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
